--- a/web/server_es.html
+++ b/web/server_es.html
@@ -16,7 +16,7 @@
 			<table cellpadding="0" cellspacing="0" width="800" border="0" align="center">
 				<tr>
 					<td rowspan="2" valign="bottom" align="left">
-						<div align="left"><a href="index_es.html"><img src="images/chronojump-boscosystem.png" alt="Chronojump main site" height="76" width="198" border="0"></a></div>
+						<div align="left"><a href="http://chronojump.org/"><img src="images/chronojump-boscosystem.png" alt="Chronojump main site" height="76" width="198" border="0"></a></div>
 					</td>
 					<td valign="center" align="center" width="100%">
 						<center>
@@ -48,9 +48,9 @@
 			<div id="slides">
 				<div id="slide1">
 					<ul>
-						<li><a href="#evaluators">Evaluadores</a></li>
-						<li><a href="#persons">Personas</a></li>
-						<li><a href="#tests">Tests</a></li>
+						<li><a href="#evaluators"><img src="images/server-stats-types-evaluators.png"></a></li>
+						<li><a href="#persons"><img src="images/server-stats-types-persons.png"></a></li>
+						<li><a href="#tests"><img src="images/server-stats-types-tests.png"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -63,7 +63,8 @@
 						<tr valign="top"><td rowspan="2">
 								<img src="server/images/small/evaluators.png" alt="Chronojump Server">
 								</td><td width="100%">
-								En este gráfico puede ver los diferentes evaluadores que han subido sus contribuciones. Cada evaluador dispone de dos barras, una para el número de saltos subidos y otra para el numero de sujetos añadidos.
+								En este gráfico puede ver los diferentes evaluadores que han subido sus contribuciones.
+								<br><br>Puede ver un informe más completo (en inglés) en el <a href="http://chronojump.org/server/chronojump_server_log.html">Chronojump server log</a>.
 								</td></tr>
 								<tr><td valign="bottom">
 										<a href="server/images/evaluators.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
@@ -77,14 +78,14 @@
 						<tr valign="top"><td rowspan="2">
 								<img src="server/images/small/persons.png" alt="Chronojump Server">
 								</td><td width="100%">
-								Aquí puede ver un gráfico de las personas (deportistas) que han sido subidos al servidor. El gráfico muestra:
-								<ul>
-									<li>Deporte
-									<li>País
-									<li>Edad
-									<li>Género
-									<li>Nivel (de práctica)
-								</ul>
+									Aquí puede ver un gráfico de las personas (deportistas) que han sido subidos al servidor. El gráfico muestra:
+									<ul>
+										<li>Deporte
+										<li>País
+										<li>Edad
+										<li>Género
+										<li>Nivel (de práctica) 
+									</ul>
 								</td></tr>
 								<tr><td valign="bottom">
 										<a href="server/images/persons.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
@@ -93,116 +94,174 @@
 				</div>
 				<div id="tests">
 					<table id="server" border="0">
-						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
-						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr><th colspan="5"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="5" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr>
-							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
-							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
-							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+							<td><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60" style="border-width: 1px;border-color: orange;"></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/ieiub.png" width="60" height="60"></a></td>
+							<td><a href="#tests4"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td width="100%"><a href="#tests5"><img src="server/images/small/tf_by_age.png" width="60" height="60"></a></td>
 						</tr>
 						<tr valign="top"><td colspan="2" rowspan="2">
 								<img src="server/images/small/tf_by_jumps_boxplot.png" width="140" height="140">
-						</td><td width="100%">
-								En esta imagen puede ver un gráfico para hombres y otro para mujeres. Cada gráfico muestra cajas de saltos simples (con sólo un tiempo de vuelo) que han sido subidos al servidor.
+						</td><td colspan="3" width="100%">
+								<b>Tiempos de vuelo en función del tipo de salto</b>
+								<br>En esta imagen puede ver un gráfico para hombres y otro para mujeres. Cada gráfico muestra cajas de saltos simples (con sólo un tiempo de vuelo) que han sido subidos al servidor.
 								<br><br>Cada caja muestra los cuartiles y los valores extraños (si los hay).
 								<br>También se muestra la <i>n</i>.
 								</td></tr>
-								<tr><td valign="bottom">
+								<tr><td colspan="3" valign="bottom">
 										<a href="server/images/tf_by_jumps_boxplot.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
 							</td>
 					</tr></table>
 				</div>
 				<div id="tests2">
 					<table id="server" border="0">
-						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
-						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr><th colspan="5"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="5" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr>
 							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
-							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
-							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
-						</tr>
-						<tr valign="top"><td colspan="2" rowspan="2">
-								<img src="server/images/small/tf_by_extra_weight.png" width="140" height="140">
-						</td><td width="100%">
-								Esta imagen muestra la correlación entre tiempo de vuelo y peso extra.
-								</td></tr>
-								<tr><td valign="bottom">
-										<a href="server/images/tf_by_extra_weight.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
-							</td>
-					</tr></table>
-				</div>
-				<div id="tests3">
-					<table id="server" border="0">
-						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
-						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr>
-							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
-							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
-							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+							<td><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60" style="border-width: 1px;border-color: orange;"></td>
+							<td><a href="#tests3"><img src="server/images/small/ieiub.png" width="60" height="60"></a></td>
+							<td><a href="#tests4"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td width="100%"><a href="#tests5"><img src="server/images/small/tf_by_age.png" width="60" height="60"></a></td>
 						</tr>
 						<tr valign="top"><td colspan="2" rowspan="2">
 								<img src="server/images/small/tf_by_level_sex_jumptype.png" width="140" height="140">
-						</td><td width="100%">
+						</td><td colspan="3" width="100%">
+								<b>Tiempo de vuelo en función de nivel, género, tipo de salto</b>
 								Este es un gráfico de cuatro variables:
 								<ul>
-									<li>Altura del salto
+									<li>Tiempo de vuelo
 									<li>Nivel de práctica
 									<li>Tipo de salto
 									<li>Género
 								</ul>
 								</td></tr>
-								<tr><td valign="bottom">
+								<tr><td colspan="3" valign="bottom">
 										<a href="server/images/tf_by_level_sex_jumptype.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="tests3">
+					<table id="server" border="0">
+						<tr><th colspan="5"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="5" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+							<td><img src="server/images/small/ieiub.png" width="60" height="60" style="border-width: 1px;border-color: orange;"></td>
+							<td><a href="#tests4"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td width="100%"><a href="#tests5"><img src="server/images/small/tf_by_age.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/ieiub.png" width="140" height="140">
+						</td><td colspan="3" width="100%">
+								<b>IE IUB</b>
+								<br>Índices:
+								<ul>
+									<li>Indice de Elasticidad (relación entre CMJ y SJ)
+									<li>Indice de Utilización de Brazos (relación entre ABK y CMJ)
+								</ul>
+								</td></tr>
+								<tr><td colspan="3" valign="bottom">
+										<a href="server/images/ieiub.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="tests4">
+					<table id="server" border="0">
+						<tr><th colspan="5"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="5" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/ieiub.png" width="60" height="60"></a></td>
+							<td><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60" style="border-width: 1px;border-color: orange;"></td>
+							<td width="100%"><a href="#tests5"><img src="server/images/small/tf_by_age.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_extra_weight.png" width="140" height="140">
+						</td><td colspan="3" width="100%">
+								<b>Correlaciones peso extra - tiempo de vuelo</b>
+								<br>Esta imagen muestra la correlación entre tiempo de vuelo y peso extra.
+								</td></tr>
+								<tr><td colspan="3" valign="bottom">
+										<a href="server/images/tf_by_extra_weight.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="tests5">
+					<table id="server" border="0">
+						<tr><th colspan="5"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="5" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/ieiub.png" width="60" height="60"></a></td>
+							<td><a href="#tests4"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td width="100%"><img src="server/images/small/tf_by_age.png" width="60" height="60" style="border-width: 1px;border-color: orange;"></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_age.png" width="140" height="140">
+						</td><td colspan="3" width="100%">
+								<b>Correlaciones edad - tiempo de vuelo</b>
+								<br>Esta imagen muestra la correlación entre tiempo de vuelo y edad.
+								</td></tr>
+								<tr><td colspan="3" valign="bottom">
+										<a href="server/images/tf_by_age.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
 							</td>
 					</tr></table>
 				</div>
 				<div id="reliability">
 					<table id="all_vert_space">
-						<tr><th colspan="2"><h3>Fiabilidad en el servidor. Dos niveles:</h3></th></tr>
+						<tr><th colspan="2"><h3>Reliability on the server. Two levels:</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 
 						<tr valign="top"><td colspan="2">
-<b>1)<span style="background-color: yellow">Datos generales</b></span> Los <i>sube</i> cualquiera que disponga de la tecnología.
-<br><b>2)<span style="background-color: #ccff00">Datos fiables</b></span> Acreditados por el grupo de investigación SAFE (Universitat Ramon Llull).
+<b>1)<span style="background-color: yellow">General data</b></span> Uploaded by anyone with the technology.
+<br><b>2)<span style="background-color: #ccff00">Reliable data</b></span> Accredited by SAFE research group (Universitat Ramon Llull).
 								</td></tr>
 <tr valign="top"><td width="50%">
-<span style="background-color: #ccff00"><b>Datos fiables</b></span>. Perfil <b>Evaluador-entrenador</b>
+<span style="background-color: #ccff00"><b>Reliable data</b></span>. Profile <b>Evaluator-trainer</b>
 <ul id="nospace">
-  <li>Titulación de entrenador nacional.
-  <li>Trabajo actual: club, institución, categoría.
-  <li>Años de entrenador en élite.
-  <li>Historial de entrenador: deportes y modalidades.
-  <li>Experiencia en utilización de instrumentos de medida.
-  <li>Trayectoria profesional (100 palabras).
+  <li>National trainer.
+  <li>Current work: club, institution, category.
+  <li>Years as elite trainer.
+  <li>Historical on trained sports and specialties.
+  <li>Experience on using measurement equipment.
+  <li>Career (100 words)
 </ul>
 </td><td>
-<span style="background-color: #ccff00"><b>Datos fiables</b></span>. Perfil <b>Evaluador-investigador</b>
+<span style="background-color: #ccff00"><b>Reliable data</b></span>. Profile <b>Evaluator-researcher</b>
 <ul id="nospace">
-  <li>Titulación conseguida. ¿Es profesor universitario?
-  <li>Investigaciones en ciencias del deporte usando la medida.
-  <li>Otras investigaciones. Años de investigador.
-  <li>Grupos de investigación universitarios.
-  <li>Becas obtenidas.
-  <li>Trayectoria profesional (100 palabras).
+  <li>Maximum reached degree.
+  <li>Teacher at University?
+  <li>Sport science researches using measure.
+  <li>Other researches. Years as researcher.
+  <li>University research groups.
+  <li>Received grants.
+  <li>Career (100 words)
 </ul>
 								</td></tr>
 						<tr valign="top"><td colspan="2">
-<span style="background-color: #ccff00"><b>Datos fiables</b></span>. Criterios <b>por sesión</b>: 
-Consentimiento informado -
-Calentamiento -
-Variaciones del protocolo (si las hay) -
-Protocolos de nuevos tests y validaciones (si los hay) -
-Los datos han sido publicados? Dónde? -
-Justificación de la investigación (100 palabras).
+<span style="background-color: #ccff00"><b>Reliable data</b></span>. Criteria <b>by session</b>: 
+Informed consent -
+Warming up -
+Protocol variations (if any) -
+New tests protocols and validations (if any) -
+Data has been published? Where? -
+Justification of the research (100 words).
 								</td></tr>
 					</tr></table>
 				</div>
 			</div>
 			<div id="note">
 				<font size="2">
-					<br>Chronojump dispone de un servidor para compartir datos entre usuarios.
-					<br>El servidor recoger y muestra datos aportados por los usuarios.
-					<br><br><a href="server_es.html#reliability">Fiabilidad en el servidor</a>.
+					<br>Chronojump has a server in order to share data between users.
+					<br>Server started to collect and show data (thanks to users contribution).
+					<br><br><a href="server.html#reliability">Realiability on the server</a>.
 				</font>
 			</div>
 		</div>
