--- a/web/documents.html
+++ b/web/documents.html
@@ -124,7 +124,16 @@
                         <th><span class="highlight2">Spanish</span></th>
                         </tr>
                         <tr>
-                        <th>Chronojump PhD thesis<br>(creation and validation of tools)</th>
+                        <th>Creation and validation of tools (article)</th>
+                        <td>PDF</td>
+                        <td>2012</td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288"><img src="images/checklist.png" alt="yes"></a></td>
+                        <td></td>
+                        <td></td>
+                        </tr>
+                        <tr>
+                        <th>Creation and validation of tools (PhD thesis)</th>
                         <td>PDF</td>
                         <td>2012</td>
                         <td></td>
@@ -287,15 +296,6 @@
                         <td></td>
                         </tr>
                         <tr>
-                        <td>Connect Photocells to Chronopic</td>
-                        <td>HTML</td>
-                        <td>2009</td>
-                        <td></td>
-                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman.html"><img src="images/checklist.png" alt="yes"></a></td>
-                        <td></td>
-                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman_es.html"><img src="images/checklist.png" alt="yes"></a></td>
-                        </tr>
-                        <tr>
                         <th>Build your contact platform<br>Modular printed circuit (recommended) (+video)</th>
                         <td>HTML</td>
                         <td>2009</td>
@@ -312,6 +312,24 @@
                         <td><a id="hoverImage" href="http://chronojump.org/construction_contact_platform.html"><img src="images/checklist.png" alt="yes"></a></td>
                         <td></td>
                         <td><a id="hoverImage" href="http://chronojump.org/construction_contact_platform_es.html"><img src="images/checklist.png" alt="yes"></a></td>
+                        </tr>
+                        <tr>
+                        <td>Connect Photocells to Chronopic</td>
+                        <td>HTML</td>
+                        <td>2009</td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman.html"><img src="images/checklist.png" alt="yes"></a></td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman_es.html"><img src="images/checklist.png" alt="yes"></a></td>
+                        </tr>
+                        <tr>
+                        <td>Fix Photocells to a tripod or bar</td>
+                        <td>HTML</td>
+                        <td>2012</td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://chronojump.org/fix_photocells.html"><img src="images/checklist.png" alt="yes"></a></td>
+                        <td></td>
+                        <td></td>
                         </tr>
                         <tr>
                         <td>Construction of a push button</td>
@@ -570,7 +588,8 @@
                             <li class="widget-container">
                                 <h2 class="widget-title">Relevant documentation</h2>
                                 <ul>
-                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Chronojump PhD thesis: creation and validation of tools (spanish)</a></li>
+                                    <li><a href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288">Creation and validation of tools (english article)</a></li>
+                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Creation and validation of tools (spanish PhD)</a></li>
                                     <li><a href="http://chronojump.org/docs/chronojump_manual_en.pdf">Software manual</a></li>
                                     <li><a href="documents.html">(See all documents)</a></li>
                                 </ul>
