--- a/web/faq_hardware.html
+++ b/web/faq_hardware.html
@@ -183,7 +183,8 @@
                             <li class="widget-container">
                                 <h2 class="widget-title">Relevant documentation</h2>
                                 <ul>
-                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Chronojump PhD thesis: creation and validation of tools (spanish)</a></li>
+                                    <li><a href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288">Creation and validation of tools (english article)</a></li>
+                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Creation and validation of tools (spanish PhD)</a></li>
                                     <li><a href="http://chronojump.org/docs/chronojump_manual_en.pdf">Software manual</a></li>
                                     <li><a href="documents.html">(See all documents)</a></li>
                                 </ul>
