--- a/web/index.html
+++ b/web/index.html
@@ -103,7 +103,7 @@
                                         <div class="flex-caption">
                                             <h1>Affordable</h1>
                                             <h2 class="slidetext1">Save money with our technologies</h2>
-                                            <p class="slidetext2">We supply you a complete jump system for less than 150 euros. </p>
+                                            <p class="slidetext2">We supply you a complete jump system for less than 160 euros. </p>
                                         </div>
                                     </div>
                                 </div>
@@ -212,7 +212,8 @@ Affordable for scools and students. Well <a href="documents.html">documented</a>
                             <li class="widget-container">
                                 <h2 class="widget-title">Relevant documentation</h2>
                                 <ul>
-                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Chronojump PhD thesis: creation and validation of tools (spanish)</a></li>
+                                    <li><a href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288">Creation and validation of tools (english article)</a></li>
+                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Creation and validation of tools (spanish PhD)</a></li>
                                     <li><a href="http://chronojump.org/docs/chronojump_manual_en.pdf">Software manual</a></li>
                                     <li><a href="documents.html">(See all documents)</a></li>
                                 </ul>
