--- a/web/documents_es.html
+++ b/web/documents_es.html
@@ -120,7 +120,16 @@
                         <th><span class="highlight2">Inglés</span></th>
                         </tr>
                         <tr>
-                        <th>Tesis doctoral sobre Chronojump<br>(creación y validación de las herramientas)</th>
+                        <th>Creación y validación de las herramientas (artículo)</th>
+                        <td>PDF</td>
+                        <td>2012</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288"><img src="images/checklist.png" alt="yes"></a></td>
+                        </tr>
+                        <tr>
+                        <th>Creación y validación de las herramientas (tesis doctoral)</th>
                         <td>PDF</td>
                         <td>2012</td>
                         <td></td>
@@ -283,15 +292,6 @@
                         <td><a id="hoverImage" href="http://chronojump.org/posters.html#seattle_09"><img src="images/checklist.png" alt="yes"></a></td>
                         </tr>
                         <tr>
-                        <td>Conectar fotocélulas al Chronopic</td>
-                        <td>HTML</td>
-                        <td>2009</td>
-                        <td></td>
-                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman_es.html"><img src="images/checklist.png" alt="yes"></a></td>
-                        <td></td>
-                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman.html"><img src="images/checklist.png" alt="yes"></a></td>
-                        </tr>
-                        <tr>
                         <th>Construcción de plataforma de contactos<br>Modular de circuito impreso (recomendada) (+vídeo)</th>
                         <td>HTML</td>
                         <td>2009</td>
@@ -308,6 +308,24 @@
                         <td><a id="hoverImage" href="http://chronojump.org/construction_contact_platform_es.html"><img src="images/checklist.png" alt="yes"></a></td>
                         <td></td>
                         <td><a id="hoverImage" href="http://chronojump.org/construction_contact_platform.html"><img src="images/checklist.png" alt="yes"></a></td>
+                        </tr>
+                        <tr>
+                        <td>Conectar fotocélulas al Chronopic</td>
+                        <td>HTML</td>
+                        <td>2009</td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman_es.html"><img src="images/checklist.png" alt="yes"></a></td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://chronojump.org/photocells_velleman.html"><img src="images/checklist.png" alt="yes"></a></td>
+                        </tr>
+                        <tr>
+                        <td>Fijar fotocélulas a un trípode o barra</td>
+                        <td>HTML</td>
+                        <td>2012</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://chronojump.org/fix_photocells.html"><img src="images/checklist.png" alt="yes"></a></td>
                         </tr>
                         <tr>
                         <td>Construcción de un pulsador</td>
@@ -566,7 +584,8 @@
                             <li class="widget-container">
                                 <h2 class="widget-title">Documentación relevante</h2>
                                 <ul>
-                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Tesis doctoral: creación y validación de las herramientas</a></li>
+                                    <li><a href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288">Creación y validación de las herramientas (artículo en inglés)</a></li>
+                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Creación y validación de las herramientas (tesis doct. en español)</a></li>
                                     <li><a href="http://chronojump.org/docs/chronojump_manual_es.pdf">Manual del software</a></li>
                                     <li><a href="documents_es.html">(Ver todos los documentos)</a></li>
                                 </ul>
