--- a/web/index_es.html
+++ b/web/index_es.html
@@ -99,7 +99,7 @@
                                         <div class="flex-caption">
                                             <h1>Asequible</h1>
                                             <h2 class="slidetext1">Tecnología para todos</h2>
-                                            <p class="slidetext2">Le enviamos un sistema completo de salto por menos de 150 euros. </p>
+                                            <p class="slidetext2">Le enviamos un sistema completo de salto por menos de 160 euros. </p>
                                         </div>
                                     </div>
                                 </div>
@@ -213,7 +213,8 @@ Asquible para los centros docentes y los estudiantes. Bien <a href="documents_es
                             <li class="widget-container">
                                 <h2 class="widget-title">Documentación relevante</h2>
                                 <ul>
-                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Tesis doctoral: creación y validación de las herramientas</a></li>
+                                    <li><a href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288">Creación y validación de las herramientas (artículo en inglés)</a></li>
+                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Creación y validación de las herramientas (tesis doct. en español)</a></li>
                                     <li><a href="http://chronojump.org/docs/chronojump_manual_es.pdf">Manual del software</a></li>
                                     <li><a href="documents_es.html">(Ver todos los documentos)</a></li>
                                 </ul>
