--- a/web/software_more_es.html
+++ b/web/software_more_es.html
@@ -163,7 +163,8 @@
                             <li class="widget-container">
                                 <h2 class="widget-title">Documentación relevante</h2>
                                 <ul>
-                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Tesis doctoral: creación y validación de las herramientas</a></li>
+                                    <li><a href="http://www.cafyd.com/REVISTA/ojs/index.php/ricyde/article/download/528/288">Creación y validación de las herramientas (artículo en inglés)</a></li>
+                                    <li><a href="http://www.tdx.cat/handle/10803/83302">Creación y validación de las herramientas (tesis doct. en español)</a></li>
                                     <li><a href="http://chronojump.org/docs/chronojump_manual_es.pdf">Manual del software</a></li>
                                     <li><a href="documents_es.html">(Ver todos los documentos)</a></li>
                                 </ul>
