--- a/web/server_es.html
+++ b/web/server_es.html
@@ -87,6 +87,7 @@
             </div>    
         </div>
         <!-- END HEADER -->
+<center><span class="highlight2"><a href="http://foro.chronojump.org/showthread.php?tid=391&pid=927">Presentación Casio ZR-1000, Kinovea, Longomatch y Chronojump en Barcelona el 22 de noviembre</a></span></center>
         
  
         
