--- a/web/index_es.html
+++ b/web/index_es.html
@@ -130,6 +130,7 @@
         
         <!-- MAIN CONTENT -->
         <div id="outermain">
+<center><span class="highlight2"><a href="http://foro.chronojump.org/showthread.php?tid=391&pid=927">Presentación Casio ZR-1000, Kinovea, Longomatch y Chronojump en Barcelona el 22 de noviembre</a></span></center>
         	<section id="maincontent">
    
                 <div class="container">
