--- a/web/photocells_velleman_es.html
+++ b/web/photocells_velleman_es.html
@@ -91,6 +91,7 @@
             </div>    
         </div>
         <!-- END HEADER -->
+<center><span class="highlight2"><a href="http://foro.chronojump.org/showthread.php?tid=391&pid=927">Presentación Casio ZR-1000, Kinovea, Longomatch y Chronojump en Barcelona el 22 de noviembre</a></span></center>
 
 <center>
 <table width="600" border="0" cellspacing="6" cellpadding="6">
