--- a/web/documents.html
+++ b/web/documents.html
@@ -142,6 +142,15 @@
                         <td><a id="hoverImage" href="http://www.tdx.cat/handle/10803/83302"><img src="images/checklist.png" alt="yes"></a></td>
                         </tr>
                         <tr>
+                        <th>Reliability of LCMJ with Chronojump (article)</th>
+                        <td>PDF</td>
+                        <td>2012</td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://www.kinsi.si/clanki.php?id=239"><img src="images/checklist.png" alt="yes"></a></td>
+                        <td></td>
+                        <td></td>
+                        </tr>
+                        <tr>
                         <th>Chronojump Manual</th>
                         <td>PDF</td>
                         <td>2004-11</td>
