--- a/web/documents_es.html
+++ b/web/documents_es.html
@@ -137,6 +137,15 @@
                         <td></td>
                         </tr>
                         <tr>
+                        <th>Fiabilidad del LCMJ con Chronojump (artículo)</th>
+                        <td>PDF</td>
+                        <td>2012</td>
+                        <td></td>
+                        <td><a id="hoverImage" href="http://www.kinsi.si/clanki.php?id=239"><img src="images/checklist.png" alt="yes"></a></td>
+                        <td></td>
+                        <td></td>
+                        </tr>
+                        <tr>
                         <th>Manual de Chronojump</th>
                         <td>PDF</td>
                         <td>2004-11</td>
